--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href="https://bootswatch.com/5/yeti/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/5/cyborg/bootstrap.min.css">
 
 
     <title>Library App</title>
@@ -16,7 +16,7 @@
 <body>
 <div class="container mt-4">
     <h1 class="display-4 text-center">
-        <i class="fas fa-book-open text-primary"></i> Personal <span class="text-primary">Library Catalogue</span></h1>
+        <i class="fas fa-book text-primary"></i> Personal <span class="text-primary">Library Catalogue</span></h1>
         <!--    this is where alert div goes -->
     <form id="book-form">
         <div class="form-group">
