changed table list view

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="https://bootswatch.com/5/cyborg/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?s=1">
 
 
     <title>Library App</title>
@@ -51,16 +51,16 @@
         <button type="submit" class="btn btn-primary" id="submit">Submit</button>
     </form>
     <table class="table table-striped mt-5">
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Pages</th>
-                <th>ISBN</th>
-                <th>Read</th>
-                <th></th>
-            </tr>
-        </thead>
+<!--        <thead class="table-col">-->
+<!--            <tr>-->
+<!--                <th>Title</th>-->
+<!--                <th>Author</th>-->
+<!--                <th>Pages</th>-->
+<!--                <th>ISBN</th>-->
+<!--                <th>Read</th>-->
+<!--                <th></th>-->
+<!--            </tr>-->
+<!--        </thead>-->
         <tbody id="book-list"></tbody>
     </table>
 </div>
